# CppStructuredGL

./: .gitignore  CMakeLists.txt  README.md
src/: gpuResource.cpp  gpuResource.hpp  main.cpp
src/buffers/: dataBuffer.cpp  dataBuffer.hpp  ebo.cpp  ebo.hpp  fbo.cpp  fbo.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/shaders/: shader.cpp  shader.hpp
src/texture/: memoryTexture.cpp  memoryTexture.hpp  memoryTexture1D.cpp  memoryTexture1D.hpp  memoryTexture2D.cpp  memoryTexture2D.hpp  memoryTexture3D.cpp  memoryTexture3D.hpp
src/utils/: file_utils.hpp  preprocessor.hpp
